--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "email-validator (>=2.2.0,<3.0.0)",
     "fastapi-limiter (>=0.1.5,<0.2.0)",
     "qrcode[pil] (>=8.0,<9.0.0)",
-    "pillow (>=11.0.0,<12.0.0)"
+    "pillow (>=11.0.0,<12.0.0)",
+    "bleach (>=6.2.0,<7.0.0)"
 ]
 
 [tool.poetry]
